--- a/web/style.css
+++ b/web/style.css
@@ -4,14 +4,29 @@
    Source: github.com/spacehuhn/WiFiDuck
  */
 /* Global */
-* {
-	color: #bfbfbf;
-	font-family: sans-serif;
-}
 
 body {
 	background: #36393e;
-	margin: 0;
+  margin: 0;
+  color: #bfbfbf;
+	font-family: sans-serif;
+}
+
+main {
+	width: 60vw;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+section {
+	margin-top: 50px;
+}
+
+footer {
+	font-size: .95em;
+	text-align: center;
+	margin-top: 3em;
+	margin-bottom: 3em;
 }
 
 h1 {
@@ -56,31 +71,6 @@ p {
 	margin: .5em 0;
 }
 
-section {
-	margin-top: 50px;
-}
-
-/* INPUTS */
-textarea {
-	width: 100%;
-	height: 10rem;
-	margin: .5rem 0;
-	padding: .5rem;
-	border: none;
-	border-radius: 4px;
-	background: #2f3136;
-	font-family: "Courier New", Courier, monospace;
-	box-sizing: border-box;
-	-moz-box-sizing: border-box;
-	-webkit-box-sizing: border-box;
-}
-
-input[type="text"] {
-	border-radius: 4px;
-	background: #2f3136;
-	border: none;
-}
-
 /* Navigation bar */
 nav {
 	display: block;
@@ -95,20 +85,6 @@ nav a {
 nav a:last-of-type {
 	float: right;
 }
-  
-/*
-nav a {
-color: #bfbfbf;
-padding: .5em;
-display: inline-block;
-text-decoration: none;
-}
-
-nav a:hover {
-background: #36393f;
-color: #cecece;
-border-radius: 4px;
-}*/
 
 .menu {
 	width: 60vw;
@@ -140,6 +116,10 @@ code {
 	border-radius: 4px;
 	overflow-y: scroll;
 	padding: 15px;
+}
+
+.white {
+  color: #bfbfbf;
 }
 
 .warn {
@@ -198,6 +178,7 @@ code {
 }
 
 .debugger {
+  font-family: monospace;
 	background: #2f3136;
 	border-radius: 4px;
 	padding: 10px;
@@ -215,87 +196,87 @@ code {
 /* ===== CHECKBOX ===== */
 /* Customize the label (the container) */
 .checkBoxContainer {
-  display: block;
-  position: relative;
-  padding-left: 35px;
-  margin-bottom: 12px;
-  cursor: pointer;
-  font-size: 22px;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-  height: 32px;
+	display: block;
+	position: relative;
+	padding-left: 35px;
+	margin-bottom: 12px;
+	cursor: pointer;
+	font-size: 22px;
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+	height: 32px;
 }
 
 /* Hide the browser's default checkbox */
 .checkBoxContainer input {
-  position: absolute;
-  opacity: 0;
-  cursor: pointer;
+	position: absolute;
+	opacity: 0;
+	cursor: pointer;
 }
 
 /* Create a custom checkbox */
 .checkmark {
-  position: absolute;
-  top: 8px;
-  left: 0;
-  height: 28px;
-  width: 28px;
-  background-color: #2F3136;
-  border-radius: 4px;
+	position: absolute;
+	top: 8px;
+	left: 0;
+	height: 28px;
+	width: 28px;
+	background-color: #2F3136;
+	border-radius: 4px;
 }
 
 /* Create the checkmark/indicator (hidden when not checked) */
 .checkmark:after {
-  content: "";
-  position: absolute;
-  display: none;
+	content: "";
+	position: absolute;
+	display: none;
 }
 
 /* Show the checkmark when checked */
 .checkBoxContainer input:checked~.checkmark:after {
-  display: block;
+	display: block;
 }
 
 .checkBoxContainer .checkmark:after {
-  left: 10px;
-  top: 7px;
-  width: 4px;
-  height: 10px;
-  border: solid white;
-  border-width: 0 3px 3px 0;
-  -webkit-transform: rotate(45deg);
-  -ms-transform: rotate(45deg);
-  transform: rotate(45deg);
+	left: 10px;
+	top: 7px;
+	width: 4px;
+	height: 10px;
+	border: solid white;
+	border-width: 0 3px 3px 0;
+	-webkit-transform: rotate(45deg);
+	-ms-transform: rotate(45deg);
+	transform: rotate(45deg);
 }
 
 /* ERROR */
 .hide {
-  display: none;
+	display: none;
 }
 
 .show {
-  display: block !important;
-  animation-name: fadeIn;
-  animation-duration: 1s;
+	display: block !important;
+	animation-name: fadeIn;
+	animation-duration: 1s;
 }
 
 @keyframes fadeIn {
-  0% {
-    opacity: 0;
-  }
+	0% {
+		opacity: 0;
+	}
 
-  100% {
-    opacity: 1;
-  }
+	100% {
+		opacity: 1;
+	}
 }
 
 hr {
-  background: #3e4146;
-  border-top: 1px dotted#fff;
-  border-bottom: none;
-  margin: 0;
+	background: #3e4146;
+	border-top: 1px dotted#fff;
+	border-bottom: none;
+	margin: 0;
 }
 
 a {
@@ -304,208 +285,188 @@ a {
 }
 
 a:hover {
-  color: #0aac42;
-  text-decoration: underline dotted;
+	color: #0aac42;
+	text-decoration: underline dotted;
 }
 
 /* Meter */
 .meter_background {
-  background: #42464D;
-  width: 100%;
-  word-break: normal;
-  min-width: 100px;
+	background: #42464D;
+	width: 100%;
+	word-break: normal;
+	min-width: 100px;
 }
 
 .meter_forground {
-  color: #fff;
-  padding: 4px 0;
-  /* + one of the colors below
-	(width will be set by the JS) */
+	color: #fff;
+	padding: 4px 0;
+	/* + one of the colors below
+		(width will be set by the JS) */
 }
 
 .meter_green {
-  background: #43B581;
+	background: #43B581;
 }
 
 .meter_orange {
-  background: #FAA61A;
+  	background: #FAA61A;
 }
 
 .meter_red {
-  background: #F04747;
+  	background: #F04747;
 }
 
 .meter_value {
-  padding-left: 8px;
+  	padding-left: 8px;
 }
 
 /* Tables */
-/* Table buttons aligned to right side
-#scriptTable th:last-child, #scriptTable td:last-child {
-    text-align: right;
-}
-*/
 table {
-  width: 100%;
-  min-width: 400px;
-  margin-bottom: 2em;
-  border-collapse: collapse;
+	width: 100%;
+	min-width: 400px;
+	margin-bottom: 2em;
+	border-collapse: collapse;
 }
 
 th {
-  word-break: break-word;
+  	word-break: break-word;
 }
 
 th, td {
-  padding: 10px 6px;
-  text-align: left;
-  border-bottom: 1px solid #5d5d5d;
+	padding: 10px 6px;
+	text-align: left;
+	border-bottom: 1px solid #5d5d5d;
 }
 
 #ducky-functions-table td {
-  min-width: 180px;
+  	min-width: 180px;
 }
 
 @media only screen and (max-width: 768px), (min-device-width: 768px) and (max-device-width: 1024px) {
 
-  .menu {
-    width: 90vw;
-  }
+	.menu {
+		width: 90vw;
+	}
 
-  main {
-    width: 90vw !important;
-  }
+	main {
+		width: 90vw !important;
+	}
 
-  /* Force table to not be like tables anymore */
-  #ducky-functions-table table, #ducky-functions-table thead, #ducky-functions-table tbody, #ducky-functions-table th, #ducky-functions-table td, #ducky-functions-table tr {
-    display: block;
-  }
+	/* Force table to not be like tables anymore */
+	#ducky-functions-table table, #ducky-functions-table thead, #ducky-functions-table tbody, #ducky-functions-table th, #ducky-functions-table td, #ducky-functions-table tr {
+		display: block;
+	}
 
-  /* Hide table headers (but not display: none;, for accessibility) */
-  #ducky-functions-table thead tr {
-    position: absolute;
-    top: -9999px;
-    left: -9999px;
-  }
+	/* Hide table headers (but not display: none;, for accessibility) */
+	#ducky-functions-table thead tr {
+		position: absolute;
+		top: -9999px;
+		left: -9999px;
+	}
 
-  #ducky-functions-table tr {
-    border: none;
-  }
+	#ducky-functions-table tr {
+		border: none;
+	}
 
-  #ducky-functions-table tr:nth-child(odd) {
-    background: #2f3136;
-    border-radius: 4px;
-  }
+	#ducky-functions-table tr:nth-child(odd) {
+		background: #2f3136;
+		border-radius: 4px;
+	}
 
-  #ducky-functions-table td {
-    /* Behave  like a "row" */
-    border: none;
-    border-bottom: 2px solid transparent;
-    position: relative;
-    padding-left: 120px;
-    line-height: 1.8rem;
-  }
+	#ducky-functions-table td {
+		/* Behave  like a "row" */
+		border: none;
+		border-bottom: 2px solid transparent;
+		position: relative;
+		padding-left: 120px;
+		line-height: 1.8rem;
+	}
 
-  #ducky-functions-table td:before {
-    /* Now like a table header */
-    position: absolute;
-    /* Top/left values mimic padding */
-    top: 6px;
-    left: 6px;
-    width: 120px;
-    padding-right: 10px;
-    white-space: nowrap;
-  }
+	#ducky-functions-table td:before {
+		/* Now like a table header */
+		position: absolute;
+		/* Top/left values mimic padding */
+		top: 6px;
+		left: 6px;
+		width: 120px;
+		padding-right: 10px;
+		white-space: nowrap;
+	}
 
-  /*
-    Label the data
-    */
-  #ducky-functions-table td:nth-of-type(1):before {
-    content: "Command";
-  }
+	/*
+		Label the data
+		*/
+	#ducky-functions-table td:nth-of-type(1):before {
+		content: "Command";
+	}
 
-  #ducky-functions-table td:nth-of-type(2):before {
-    content: "Example";
-  }
+	#ducky-functions-table td:nth-of-type(2):before {
+		content: "Example";
+	}
 
-  #ducky-functions-table td:nth-of-type(3):before {
-    content: "Description";
-  }
+	#ducky-functions-table td:nth-of-type(3):before {
+		content: "Description";
+	}
 }
 
 /* Inputs and buttons */
-.button, button, input[type="submit"], input[type="reset"], input[type="button"], input[type="file"] {
-  display: inline-block;
-  height: 38px;
-  padding: 0 20px;
-  text-align: center;
-  font-weight: 600;
-  line-height: 38px;
-  letter-spacing: .1rem;
-  text-transform: uppercase;
-  text-decoration: none;
-  white-space: nowrap;
-  background: #2f3136;
-  border-radius: 4px;
-  border: none;
-  cursor: pointer;
-  box-sizing: border-box;
-  margin: .2rem 0;
+textarea {
+	color: #bfbfbf;
+	resize: vertical;
+	width: 100%;
+	height: 400px;
+	padding: 15px;
+	border: none;
+	border-radius: 4px;
+	background: #2f3136;
+	font-family: "Courier New", Courier, monospace;
+	box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	-webkit-box-sizing: border-box;
 }
 
-button:hover, input[type="submit"]:hover, input[type="reset"]:hover, input[type="button"]:hover {
-  background: #42444a;
-}
-
-button:active, input[type="submit"]:active, input[type="reset"]:active, input[type="button"]:active {
-  transform: scale(.93);
-}
-
-/* Forms */
-input[type="email"], input[type="number"], input[type="search"], input[type="text"], input[type="tel"], input[type="url"], input[type="password"], select {
-  height: 38px;
-  padding: 6px 10px;
-  /* The 6px vertically centers text on FF, ignored by Webkit */
-  background-color: #2f3136;
-  border-radius: 4px;
-  box-shadow: none;
-  box-sizing: border-box;
-  color: #d4d4d4;
-  border: none;
-  width: 5em;
+input[type="file"] {
+	padding: 7px 20px;
 }
 
 input[type="text"] {
-  width: 10em;
+	color: #bfbfbf;
+	text-transform: none;
+	width: 10em;
+}
+
+input[type="text"]:hover {
+	cursor: text;
+}
+
+input, button {
+	padding: 10px 20px;
+	border: none;
+	border-radius: 4px;
+	background: #2f3136;
+	letter-spacing: .1rem;
+	text-transform: uppercase;
+}
+
+input:hover, button:hover {
+	background: #42444a;
+	cursor: pointer;
 }
 
 .setting {
-  width: 100% !important;
-  max-width: 284px !important;
-}
-
-/* FOOTER */
-footer {
-	font-size: .95em;
-	text-align: center;
-	margin-top: 3em;
-	margin-bottom: 3em;
+	width: 100% !important;
+	max-width: 284px !important;
 }
 
 /* GRID SYSTEM */
-main {
-  width: 60vw;
-  margin-left: auto;
-  margin-right: auto;
-}
-
 .row {
-  position: relative;
-  width: 100%;
+	position: relative;
+	width: 100%;
+	margin-top: 10px;
 }
 
 .row [class^="col"] {
-  float: left;
+	float: left;
 }
 
 .col-1,
