--- a/web/style.css
+++ b/web/style.css
@@ -446,6 +446,7 @@ input, button {
 	background: #2f3136;
 	letter-spacing: .1rem;
 	text-transform: uppercase;
+	margin: 2px 0;
 }
 
 input:hover, button:hover {
